# openedge

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
examples/: realtime_detection.py
openedge/: __init__.py  app.py  build.py  cli.py  constants.py  context.py  convert.py  generate.py  optimize.py  quantize.py  utils.py  validate.py
openedge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openedge/convert/: __init__.py  run.py
openedge/generate/: __init__.py  run.py
openedge/optimize/: __init__.py  run.py
openedge/quantize/: __init__.py  run.py
openedge/validate/: __init__.py  run.py
tests/: test_openedge.py  test_openedge_comprehensive.py
tests/data/: README.md
