[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openedge"
version = "0.1.0"
description = "Open-source embedded ML deployment pipeline"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "OpenEdge Team"}]
dependencies = [
    "typer>=0.12.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.0.0"]
tf = ["tensorflow>=2.15.0"]
all = ["ultralytics>=8.0.0", "tensorflow>=2.15.0"]

[project.scripts]
openedge = "openedge.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["openedge*"]